--- a/Avance 1/Views/Siniestro/Delete.cshtml
+++ b/Avance 1/Views/Siniestro/Delete.cshtml
@@ -12,22 +12,28 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Fecha_Siniestro)
+            @Html.DisplayNameFor(model => model.IdZona)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Fecha_Siniestro)
+            @Html.DisplayFor(model => model.IdZona)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nivel_Siniestro)
+            @Html.DisplayNameFor(model => model.FechaSiniestro)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nivel_Siniestro)
+            @Html.DisplayFor(model => model.FechaSiniestro)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdCam)
+            @Html.DisplayNameFor(model => model.NivelUrgencia)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdCam)
+            @Html.DisplayFor(model => model.NivelUrgencia)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Descripcion)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Descripcion)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdAgente)
