--- a/Avance 1/Views/Agente/Create.cshtml
+++ b/Avance 1/Views/Agente/Create.cshtml
@@ -18,19 +18,17 @@
                 <span asp-validation-for="IdAgente" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Descripcion" class="control-label"></label>
-                <input asp-for="Descripcion" class="form-control" />
-                <span asp-validation-for="Descripcion" class="text-danger"></span>
+                <label asp-for="Cargo" class="control-label"></label>
+                <input asp-for="Cargo" class="form-control" />
+                <span asp-validation-for="Cargo" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="IdPersona" class="control-label"></label>
-                <input asp-for="IdPersona" class="form-control" />
-                <span asp-validation-for="IdPersona" class="text-danger"></span>
+                <label asp-for="PersonaId" class="control-label"></label>
+                <select asp-for="PersonaId" class ="form-control" asp-items="ViewBag.PersonaId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="idRole" class="control-label"></label>
-                <input asp-for="idRole" class="form-control" />
-                <span asp-validation-for="idRole" class="text-danger"></span>
+                <label asp-for="RolId" class="control-label"></label>
+                <select asp-for="RolId" class ="form-control" asp-items="ViewBag.RolId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
