--- a/Avance 1/Views/Agente/Delete.cshtml
+++ b/Avance 1/Views/Agente/Delete.cshtml
@@ -12,22 +12,22 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Descripcion)
+            @Html.DisplayNameFor(model => model.Cargo)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Descripcion)
+            @Html.DisplayFor(model => model.Cargo)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdPersona)
+            @Html.DisplayNameFor(model => model.Persona)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdPersona)
+            @Html.DisplayFor(model => model.Persona.IdPersona)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.idRole)
+            @Html.DisplayNameFor(model => model.Rol)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.idRole)
+            @Html.DisplayFor(model => model.Rol.IdRol)
         </dd>
     </dl>
     
