--- a/Avance 1/Views/Shared/_Layout.cshtml
+++ b/Avance 1/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Persona" asp-action="">Persona</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Roles" asp-action="">Rol</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Rol" asp-action="">Rol</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Zona" asp-action="">Zona</a>
