--- a/Avance 1/Views/Agente/Create.cshtml
+++ b/Avance 1/Views/Agente/Create.cshtml
@@ -13,22 +13,17 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="IdAgente" class="control-label"></label>
-                <input asp-for="IdAgente" class="form-control" />
-                <span asp-validation-for="IdAgente" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Cargo" class="control-label"></label>
                 <input asp-for="Cargo" class="form-control" />
                 <span asp-validation-for="Cargo" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PersonaId" class="control-label"></label>
-                <select asp-for="PersonaId" class ="form-control" asp-items="ViewBag.PersonaId"></select>
+                <label asp-for="Personaid" class="control-label"></label>
+                <select asp-for="Personaid" class ="form-control" asp-items="ViewBag.Personaid"></select>
             </div>
             <div class="form-group">
-                <label asp-for="RolId" class="control-label"></label>
-                <select asp-for="RolId" class ="form-control" asp-items="ViewBag.RolId"></select>
+                <label asp-for="Rolid" class="control-label"></label>
+                <select asp-for="Rolid" class ="form-control" asp-items="ViewBag.Rolid"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
