--- a/Avance 1/Views/Agente/Edit.cshtml
+++ b/Avance 1/Views/Agente/Edit.cshtml
@@ -19,14 +19,14 @@
                 <span asp-validation-for="Cargo" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PersonaId" class="control-label"></label>
-                <select asp-for="PersonaId" class="form-control" asp-items="ViewBag.PersonaId"></select>
-                <span asp-validation-for="PersonaId" class="text-danger"></span>
+                <label asp-for="Personaid" class="control-label"></label>
+                <select asp-for="Personaid" class="form-control" asp-items="ViewBag.Personaid"></select>
+                <span asp-validation-for="Personaid" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="RolId" class="control-label"></label>
-                <select asp-for="RolId" class="form-control" asp-items="ViewBag.RolId"></select>
-                <span asp-validation-for="RolId" class="text-danger"></span>
+                <label asp-for="Rolid" class="control-label"></label>
+                <select asp-for="Rolid" class="form-control" asp-items="ViewBag.Rolid"></select>
+                <span asp-validation-for="Rolid" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
