--- a/Avance 1/Views/Rol/Create.cshtml
+++ b/Avance 1/Views/Rol/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Avance_1.Models.Roles
+﻿@model Avance_1.Models.Rol
 
 @{
     ViewData["Title"] = "Create";
@@ -6,17 +6,12 @@
 
 <h1>Create</h1>
 
-<h4>Roles</h4>
+<h4>Rol</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="IdRol" class="control-label"></label>
-                <input asp-for="IdRol" class="form-control" />
-                <span asp-validation-for="IdRol" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="Nombre_rol" class="control-label"></label>
                 <input asp-for="Nombre_rol" class="form-control" />
@@ -28,9 +23,9 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Nivel_privilegio" class="control-label"></label>
-                <input asp-for="Nivel_privilegio" class="form-control" />
-                <span asp-validation-for="Nivel_privilegio" class="text-danger"></span>
+                <label asp-for="Tipo_privilegio" class="control-label"></label>
+                <input asp-for="Tipo_privilegio" class="form-control" />
+                <span asp-validation-for="Tipo_privilegio" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
