--- a/Avance 1/Views/Rol/Delete.cshtml
+++ b/Avance 1/Views/Rol/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Avance_1.Models.Roles
+﻿@model Avance_1.Models.Rol
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Roles</h4>
+    <h4>Rol</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -24,10 +24,10 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nivel_privilegio)
+            @Html.DisplayNameFor(model => model.Tipo_privilegio)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nivel_privilegio)
+            @Html.DisplayFor(model => model.Tipo_privilegio)
         </dd>
     </dl>
     
