--- a/Avance 1/Views/Agente/Create.cshtml
+++ b/Avance 1/Views/Agente/Create.cshtml
@@ -13,9 +13,14 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Cargo" class="control-label"></label>
-                <input asp-for="Cargo" class="form-control" />
-                <span asp-validation-for="Cargo" class="text-danger"></span>
+                <label asp-for="IdAgente" class="control-label"></label>
+                <input asp-for="IdAgente" class="form-control" />
+                <span asp-validation-for="IdAgente" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Estado_Agente" class="control-label"></label>
+                <input asp-for="Estado_Agente" class="form-control" />
+                <span asp-validation-for="Estado_Agente" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Personaid" class="control-label"></label>
