--- a/Avance 1/Views/Agente/Delete.cshtml
+++ b/Avance 1/Views/Agente/Delete.cshtml
@@ -12,10 +12,10 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Cargo)
+            @Html.DisplayNameFor(model => model.Estado_Agente)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cargo)
+            @Html.DisplayFor(model => model.Estado_Agente)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Persona)
