--- a/Avance 1/Views/Agente/Edit.cshtml
+++ b/Avance 1/Views/Agente/Edit.cshtml
@@ -14,9 +14,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="IdAgente" />
             <div class="form-group">
-                <label asp-for="Cargo" class="control-label"></label>
-                <input asp-for="Cargo" class="form-control" />
-                <span asp-validation-for="Cargo" class="text-danger"></span>
+                <label asp-for="Estado_Agente" class="control-label"></label>
+                <input asp-for="Estado_Agente" class="form-control" />
+                <span asp-validation-for="Estado_Agente" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Personaid" class="control-label"></label>
